deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stock-picker-ingress
  namespace: default
  annotations:
spec:
  rules:
  - host: stockpickerping.com
    http:
      paths:
      - path: /stock/
        pathType: Prefix
        backend:
          service:
            name: stock-picker-service
            port:
              number: 80
